@@ -110,7 +110,8 @@ public class SequentialAccessSparseVector extends AbstractVector {
 
   @Override
   protected Matrix matrixLike(int rows, int columns) {
-    return new SparseRowMatrix(rows, columns);
+    //return new SparseRowMatrix(rows, columns);
+    return new SparseMatrix(rows, columns);
   }
 
   @SuppressWarnings("CloneDoesntCallSuperClone")
