@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1508: Performance problems with sparse matrices (ssc)
+
   MAHOUT-1374: Ability to provide input file with userid, itemid pair (Aliaksei Litouka via ssc)
 
   MAHOUT-1501: ClusterOutputPostProcessorDriver has private default constructor (ssc)
